Clean Gemfile by removing unicorn which is useful but not necessary to run Ekylibre Remove style which fobids arabic to be well presented
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1596 67a09383-3dfa-4221-8551-890bac9c277c

--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -338,7 +338,7 @@ h2.form { font-size: 15px; margin: 8px 0px 4px; border-bottom: 1px solid #C9D7F1
 .login table tr td { padding: 2px 4px;}
 .login table tr td.label { text-align:right;}
 html[dir="rtl"] .login table tr td.label { text-align:left !important;}
-.login table tr td.input, .login table tr td.input input { text-align:left; width:128px;}
+.login table tr td.input, .login table tr td.input input { width:128px;}
 .login table tr td.button {text-align:center; padding:6px 6px 16px;}
 .login table.browsers tr td { padding: 8px 16px;}
 /*div.flash-error {text-align:center; color:red; font-style:italic;height:20px;padding: 16px; margin-top: 64px;}*/
