--- a/app/views/management/_price_amount_form.html.haml
+++ b/app/views/management/_price_amount_form.html.haml
@@ -1,5 +1,5 @@
 =formalize do |f|
-  -f.title :title
+  -f.title :amount
   -f.field :price, :category_id, :choices=>{:reflection=>:entity_categories}, :new=>{:controller=>:relations, :action=>:entity_category_create}
   -f.field :price, :amount
   -f.field :price, :tax_id, :choices=>{:reflection=>:taxes}, :new=>{:controller=>:accountancy, :action=>:tax_create}
