Add more compatibility with Rails 3 and replace autosave because of their changement of behavior. Updates all callback methods
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1599 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/account.html.haml
+++ b/app/views/accountancy/account.html.haml
@@ -1,7 +1,7 @@
 =toolbar do |t|
-  -t.link :account_update, :id=>@account.id
+  -t.update @account
   -if @account.letterable?
-    -t.link :account_letter, :id=>@account.id
+    -t.letter @account
 %table.full-width
   %tr
     %td
