--- a/app/views/accountancy/journal_record.html.haml
+++ b/app/views/accountancy/journal_record.html.haml
@@ -1,6 +1,6 @@
 =render :partial=>"journals"
 =toolbar do |t|
-  -t.link(:journal_record_update, :id=>@journal_record.id) if @journal_record.draft?
+  -t.update @journal_record unless @journal_record.closed?
 
 %table
   %tr
