Finishes the I18n process by setting English as default language and updating cleaning process of reference files
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1602 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! XML utf-8
 =doctype_tag
 
-%html{:xmlns=>"http://www.w3.org/1999/xhtml", :dir=>t("about.dir"), :lang=>t("about.iso2"), "xml:lang"=>t("about.iso2")}
+%html{:xmlns=>"http://www.w3.org/1999/xhtml", :dir=>t("i18n.dir"), :lang=>t("i18n.iso2"), "xml:lang"=>t("i18n.iso2")}
   %head
     %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
     =title_tag
