--- a/app/views/management/_subscription_nature_form.html.haml
+++ b/app/views/management/_subscription_nature_form.html.haml
@@ -3,7 +3,7 @@
   -if @subscription_nature.new_record?
     - f.field :subscription_nature, :nature, :field=>:radio, :choices=>SubscriptionNature.natures
   -else
-    - f.field t('activerecord.attributes.subscription_nature.nature'), @subscription_nature.nature_label
+    - f.field @subscription_nature.class.human_attribute_name("nature"), @subscription_nature.nature_label
   - f.field :subscription_nature, :name
   - f.field :subscription_nature, :reduction_rate
   - f.field :subscription_nature, :entity_link_nature_id, :choices=>{:reflection=>:entity_link_natures, :include_blank=>true}, :new=>{:controller=>:relations, :action=>:entity_link_nature_create}
