--- a/app/views/relations/_coordinates_form.html.haml
+++ b/app/views/relations/_coordinates_form.html.haml
@@ -4,7 +4,7 @@
   -f.field :contact, :line_3
   -f.field :contact, :line_4
   -f.field :contact, :line_5
-  -f.field  t("activerecord.attributes.contact.line_6"), text_field_with_auto_complete(:contact, :line_6)
+  -f.field Contact.human_attribute_name("line_6"), text_field_with_auto_complete(:contact, :line_6)
   -f.field :contact, :country, :choices=>countries, :options=>{:include_blank=>true}
   -f.title :canals
   -f.field :contact, :phone
