--- a/app/views/relations/_event_form.html.haml
+++ b/app/views/relations/_event_form.html.haml
@@ -5,7 +5,7 @@
   -f.field :event, :responsible_id,   :choices=>{:reflection=>:users, :label=>:label, :order=>"last_name, first_name"}, :new=>{:controller=>:company, :action=>:user_create}
   -event_nature_id = f.field :event, :nature_id, :choices=>{:reflection=>:event_natures, :label=>:name, :order=>:name}, :new=>{:action=>:event_nature_create}
   -f.field :event, :duration
-  -f.field  t("activerecord.attributes.event.location"), text_field_with_auto_complete(:event, :location)
+  -f.field Event.human_attribute_name("location"), text_field_with_auto_complete(:event, :location)
   -f.field :event, :reason, :field=>:textarea
   -f.field :event, :started_at
 
