--- a/app/views/relations/entity.html.haml
+++ b/app/views/relations/entity.html.haml
@@ -13,7 +13,7 @@
       =evalue @entity, :dead_on unless @entity.dead_on.blank?
       =evalue @entity, :active
       =evalue @entity, :website unless @entity.website.blank?
-      =evalue t('activerecord.attributes.entity.country'), image_tag("countries/"+@entity.country+".png")+" "+t("countries."+@entity.country) unless @entity.country.blank?
+      =evalue Entity.human_attribute_name("country"), image_tag("countries/"+@entity.country+".png")+" "+t("countries."+@entity.country) unless @entity.country.blank?
     -if @entity.client
       %td
         =evalue @entity, :category, :label=>:name, :url=>{:action=>:entity_category}
@@ -71,7 +71,7 @@
   -tb.tab(tc(:observations, :count=>@entity.observations.count)) do |c|
     -c << toolbar do
       -link :observation_create, {:entity_id=>@entity.id}
-    -c << dyta(:observations)
+    -c << dyta(:entity_observations)
   -tb.tab(tc(:mandates, :count=>@entity.mandates.count)) do |c|
     -c << toolbar do
       -link :mandate_create, {:entity_id=>@entity.id}
