--- a/app/views/relations/index.html.haml
+++ b/app/views/relations/index.html.haml
@@ -3,7 +3,7 @@
 .menu.indicator
   %h2= tg('indicator')
   %ul
-    =li_link_to tc('nb_entities',:count=>@entities.size), :controller=>:relations, :action=>:entities
+    =li_link_to tc('nb_entities',:count=>@current_company.entities.count), :controller=>:relations, :action=>:entities
 
 -if @current_user.future_events.size > 0
   %h2=tc(:future_events)
