--- a/app/views/company/help.html.haml
+++ b/app/views/company/help.html.haml
@@ -15,7 +15,7 @@
             -for r in @results[0..@per_page-1]
               %li=render :partial=>'help_result', :locals=>{:result=>r}
           -if @results.size>@per_page
-            =link_to_function(tc(:other_results), "var list=$('other_results'); if (list.style.display=='none') {list.show();} else {list.hide();}", :class=>:more)
+            =link_to_function(tc(:other_results), "var list=$('other_results'); if (list.style.display=='none') {list.show();} else {list.hide();}", :class=>"icon im-more")
             %ul#other_results{:style=>'display:none'}
               -for r in @results[@per_page..-1]
                 %li=render :partial=>'help_result', :locals=>{:result=>r}
