--- a/app/views/layouts/dialog.html.haml
+++ b/app/views/layouts/dialog.html.haml
@@ -3,7 +3,7 @@
   .help.flex-3.anchor-right{:id=>help_id, :style=>("display:none;" unless session[:help])}=help_tag
   .main.flex-9
     .nav
-      =link_to_function(tg(:close), "closeDialog('#{params[:dialog]}')", :class=>"help-close help-link")
+      =link_to_function(tg(:close), "closeDialog('#{params[:dialog]}')", :class=>"icon im-close")
       =help_link_tag(:update=>help_id, :resize=>params[:dialog], :url=>{:dialog=>params[:dialog]})
       =title_header_tag
     .yield.flex
