--- a/public/themes/tekyla/stylesheets/dyta.css
+++ b/public/themes/tekyla/stylesheets/dyta.css
@@ -1,50 +1,37 @@
-/*h3.dyta {padding:4px;color: #139; font-size: 16px; }*/
 div.dyta { margin: 0; padding: 0; width:100%-30px; }
-/*table.dyta { border-collapse: collapse; width:100%;  padding:0; margin: 0; border-bottom: 1px solid #BACFE6;}*/
 table.dyta { border-collapse: collapse; width:100%;  padding:0; margin: 0; }
 table.dyta tbody { border-bottom: 1px solid #BACFE6;}
-/*table.dyta th { background: #e9f3fe url(../images/table_head.png) repeat-x bottom; padding:1px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left; }*/
-table.dyta th { background: #e9f3fe url(../images/table_head.png) repeat-x bottom; padding:1px 3px; color: #000; font-weight: normal; text-align:left; }
+table.dyta th { background: #e9f3fe url(../images/table_head.png) repeat-x bottom; padding:1px 3px; color: #000; font-weight: normal; }
+html[dir="ltr"] table.dyta th { text-align: left; }
+html[dir="rtl"] table.dyta th { text-align: right; }
 table.dyta th:hover { background: #e9f3fe url(../images/table_head_hover.png) repeat-x bottom; }
-table.dyta th.sorted { background: #C9D3E2 url(../images/table_head_sorted.png) repeat-x bottom; padding:2px 3px; color: #000; font-weight: normal; text-align:left; }
-/*
-table.dyta th a.sort { display:block; margin-right:18px; text-decoration:none; padding: 1px; color: #336; }
-table.dyta th a.sort { display:block; width: 100%;}
-*/
-table.dyta th a.sort { display:block; text-decoration:none; padding: 1px 14px 1px 1px; color: #336; }
-/*table.dyta th a.sort:active { padding:2px 0 0 2px;}*/
+table.dyta th.sorted { background: #C9D3E2 url(../images/table_head_sorted.png) repeat-x bottom; padding:2px 3px; color: #000; font-weight: normal; }
+table.dyta th a.sort { display:block; text-decoration:none; padding: 1px 14px 1px 1px; color: #336; background-position: right center; background-repeat: no-repeat; }
 table.dyta th a.sort:active { padding:2px 13px 0px 2px;}
-table.dyta th a.sort.unsorted { background: url(../images/buttons/center.png) right center no-repeat; }
-table.dyta th a.sort.desc { background: url(../images/buttons/down3.png) right center no-repeat; }
-table.dyta th a.sort.asc { background: url(../images/buttons/up3.png) right center no-repeat; }
-/*
-table.dyta tr.odd  td {background: #E1E6FF;}
-table.dyta tr.even td {background: #F0F2FF;}
-*/
+html[dir="rtl"] table.dyta th a.sort { padding: 1px 1px 1px 14px; background-position: left center;}
+html[dir="rtl"] table.dyta th a.sort:active { padding:2px 2px 0px 13px;}
+table.dyta th a.sort.unsorted { background-image: url(../images/buttons/center.png); }
+table.dyta th a.sort.desc { background-image: url(../images/buttons/down3.png); }
+table.dyta th a.sort.asc { background-image: url(../images/buttons/up3.png); }
 table.dyta tr.root td {font-weight: bold; }
 table.dyta tr      td {padding: 0px 2px;color: #007; height:22px;}
 table.dyta tr      td.chk { text-align:center}
 table.dyta tr      td.act { padding: 0 1px; width:18px; }
 table.dyta tr      td.act a {padding: 1px; margin: 0; display:block; text-align: center;}
 table.dyta tr      td.act a img {padding: 0; margin: 0; display:block; border: none;}
-/*
-table.dyta tr.odd  td.act { background: #E5D9DD; }
-table.dyta tr.even td.act { background: #F2E4DD; }
-table.dyta tr.odd  td.sorted { background: #d6dbf9; }
-table.dyta tr.even td.sorted { background: #e4e7f9; } 
-*/
 table.dyta tr.child td { color: #77A; }
 table.dyta tr.child td:first-child { padding-left:20px; }
 table.dyta td.empty { text-align:center; color: #777; padding:4px; background: #EEF; }
 table.dyta th, table.dyta td.empty, table.dyta td.procedures { border-top: 1px solid #BACFE6; }
 table.dyta th, table.dyta td { border-left: 1px solid #BACFE6; border-right: 1px solid #BACFE6; }
-/*table.dyta tr      th.footer { clear:both; border-top:1px solid #BACFE6; padding: 0px 3px; background: #e9f3fe url(../images/table_head.png) repeat-x bottom; }*/
+
 table.dyta tr      th.footer { clear:both; border:none; background: #EEEFFA; }
-
-
 table.dyta tr      th.footer div.export { padding: 2px; float:left;}
+html[dir="rtl"] table.dyta tr      th.footer div.export { float:right;}
 table.dyta tr      th.footer div.export a { padding: 0 2px 0 14px; margin: 0 2px; background: url(../images/buttons/spreadsheet.png) left center no-repeat;}
+
 table.dyta tr      th.footer div.pagination { padding: 2px; float:right;}
+html[dir="rtl"] table.dyta tr      th.footer div.pagination { float:left;}
 table.dyta tr      th.footer div.pagination * { padding:2px 4px; }
 table.dyta tr      th.footer div.pagination span.current { font-weight:bold; color: black; }
 table.dyta tr      th.footer div.pagination em { font-weight:bold; color: black; font-style: normal; }
@@ -53,6 +40,12 @@ table.dyta tr      th.footer div.pagination .previous_page { padding:2px 4px 2px
 table.dyta tr      th.footer div.pagination .previous_page.disabled { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2-dis.png) no-repeat left;}
 table.dyta tr      th.footer div.pagination .next_page { padding:2px 10px 2px 4px; background: url(../images/buttons/next2.png) no-repeat right;}
 table.dyta tr      th.footer div.pagination .next_page.disabled { padding:2px 10px 2px 4px; background: url(../images/buttons/next2-dis.png) no-repeat right;}
+html[dir="rtl"] table.dyta tr      th.footer div.pagination .previous_page { padding:2px 10px 2px 4px; background: url(../images/buttons/next2.png) no-repeat right;}
+html[dir="rtl"] table.dyta tr      th.footer div.pagination .previous_page.disabled { padding:2px 10px 2px 4px; background: url(../images/buttons/next2-dis.png) no-repeat right;}
+html[dir="rtl"] table.dyta tr      th.footer div.pagination .next_page { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2.png) no-repeat left;}
+html[dir="rtl"] table.dyta tr      th.footer div.pagination .next_page.disabled { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2-dis.png) no-repeat left;}
+
+
 table.dyta tr      td.decimal { text-align: right; }
 table.dyta tr      td.float   { text-align: right; }
 table.dyta tr      td.integer { text-align: right; }
