Add printable/resized modes and auto-select language from navigator
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1613 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     =javascript_include_tag "dyke"
     =#javascript_include_tag "raphael", "openlayers"
   %body
-    #body.flex
+    #body.flex{:class=>("resizable" if resizable?)}
       #top=top_tag
       #wrap.wrap.hbox.flex
         #side.side.anchor-left{:style=>("display:none;" unless session[:side])}=side_tag
