--- a/public/themes/tekyla/stylesheets/print.css
+++ b/public/themes/tekyla/stylesheets/print.css
@@ -1,13 +1,23 @@
-* { padding: 0; margin:0; font-size:10pt; font-family:serif;}
+* { padding: 0; margin:0; font-size:10pt; font-family: Arial, sans-serif;}
 
-h1 { font-size: 16pt; }
+h1 { font-size: 16pt; font-weight: normal; border-bottom: 0.1mm solid black; margin-bottom: 2mm;}
 
-#top, #side, #help, #help-open, .toolbar, .act { display:none; }
+#top, #side, #help, #help-open, .toolbar, .act, .side-link, .search, .tabbox.journals, .view a, .view span { display:none; }
 
 #main { width: 100%; }
-#left { width: 0%; }
 
 .dyta { border-collapse: collapse; width: 100%; }
 .dyta th, .dyta td { border: 0.1mm solid black; padding: 0.5mm; text-decoration:none;}
-.dyta th { font-weight: bold; }
+.dyta th, .dyta th a { font-weight: bold; background: #DDD; color: black; text-decoration: none; }
+.dyta td, .dyta td a { color: black; text-decoration: none; }
 
+.dyta tr.empty td { padding: 5mm; text-align:center; }
+.dyta th.footer .export { display: none; }
+
+.checkbox-true:before { content: '☑'; font-size: 12pt; }
+.checkbox-false:before { content: '☐'; font-size: 12pt;}
+
+.evalue .label { color: #888; padding: 0 2mm; }
+.evalue .label { font-weight: bold }
+
+@page { size: portrait; margin: 1cm; }
