--- a/app/views/shared/form_create.html.haml
+++ b/app/views/shared/form_create.html.haml
@@ -6,7 +6,7 @@
       =render :partial=>@partial
       .end
     .actions
-      =submit_tag(tg(@options[:submit]||:create))
+      =submit_tag(tg(@options[:submit]||:create), :disable_with=>tl(:please_wait))
       =link_to_function(tg(@options[:cancel]||:cancel), "closeDialog('#{params[:dialog]}')")
 -else
   =form_tag(nil, {:id=>form_id, :style=>'overflow:none', :class=>"vbox flex"}) do
@@ -14,6 +14,6 @@
       =render :partial=>@partial
       .end
     .actions
-      =submit_tag(tg(@options[:submit]||:create))
+      =submit_tag(tl(@options[:submit]||:create), :disable_with=>tl(:please_wait))
       =link_to_back :label=>@options[:cancel]||:cancel
 
