--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -75,7 +75,7 @@ body { background: #C9D7F1; }
 .dialog {  background: #C9D7F1; }
 .dialog .wrap { border: 8px solid #95b0e4; }
 .dialog .main { border-top: 1px solid #95b0e4; padding: 0 8px 8px 8px; }
-.fields { background: url(../images/shadow-top.png) repeat-x bottom; overflow: auto; height: 480px; }
+.fields { background: url(../images/shadow-top.png) repeat-x bottom; overflow: auto; }
 
 .end { height: 8px; }
 .main { padding: 0 8px 8px 8px; } /*  overflow: visible; */
